Fix problems found by Emacs flyspell mode

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -38,7 +38,7 @@ An example application utilizing the physics list is introduced.
 
 \section{Introduction} \label{sec:intro}
 In this paper we are interested on issues relevant Geant4 simulation of nuclear physics applications,
-neutron production and modelling of spallation reactions.  
+neutron production and modeling of spallation reactions.  
 
 
 %\subsection{Accelerator Driven Systems}
@@ -360,7 +360,7 @@ Use-cases& \\
 
 \begin{thebibliography}{9}
 
-\bibitem{incl} A. Boudard et al., \emph{Intranuclear cascade model for
+\bibitem{incl} A. Boudard et al., \emph{Intra-nuclear cascade model for
     a comprehensive description of spallation reaction data}, Phys.
   Rev. C66 (2002) 044615
 \bibitem{g4} \emph{Geant4 collaboration website} \\ {\tt http://\-cern.ch/\-geant4}
