Fix: One of our motivations (plural form)

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -37,14 +37,14 @@ An example application utilizing the physics list is introduced.
 \end{abstract}
 
 \section{Introduction} \label{sec:intro}
-In this paper we are interested in issues relevant Geant4 simulation of nuclear physics applications,
+In this paper we are interested in issues relevant to Geant4 simulation of nuclear physics applications,
 neutron production and modeling of spallation reactions.  
 
 
 %\subsection{Accelerator Driven Systems}
 %ADS
 % Material: http://users.ictp.it/~pub_off/lectures/lns012/Kadi_002.pdf
-One of our motivation is to  develop Geant4 tools
+One of our motivations is to  develop Geant4 tools
  for simulation of Accelerator Drive System (ADS)
 The goal of accelerator driven sub-critical reactor 
 development is to provide safer and more effective
