Fix: added missing .

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -45,7 +45,7 @@ neutron production and modeling of spallation reactions.
 %ADS
 % Material: http://users.ictp.it/~pub_off/lectures/lns012/Kadi_002.pdf
 One of our motivations is to  develop Geant4 tools
- for simulation of Accelerator Driven System (ADS)
+ for simulation of Accelerator Driven System (ADS).
 The goal of accelerator driven sub-critical reactor 
 development is to provide safer and more effective
 methods of nuclear power production. 
