Explain that ABLA is a de-excitation model

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -61,7 +61,7 @@ transmutes nuclear waste to less harmful isotopes.
 
 
 To this aim we present a new Geant4 physics list, 
-based on INCL \cite{incl} intra-nuclear cascade model and ABLA model in Geant4 9.2~\cite{g4}. 
+based on INCL \cite{incl} intra-nuclear cascade model and ABLA de-excitation model in Geant4 9.2~\cite{g4}. 
 
 
 %The INCL model is well established for targets heavier than Aluminium
