Fix: add missing article (the concept of a physics list)

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -69,7 +69,7 @@ based on INCL \cite{incl} intra-nuclear cascade model and ABLA de-excitation mod
 
 
 This paper is organized as follows.
-Section~\ref{sec:list} briefly summarises the concept of physics list.
+Section~\ref{sec:list} briefly summarises the concept of a physics list.
 Geant4 9.2 models intra-nuclear cascade INCL or Liege cascade, and ABLA evaporation-fission model
 applied in this work are introduced in Section~\ref{sec:models},
 Section~\ref{sec:newlist} documents the details of physics list implementation, 
