Fix: outline of future developments

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -77,7 +77,7 @@ Section~\ref{sec:newlist} documents the details of physics list implementation,
 %for the use case of spallation reaction study.
 Physics performance is demonstrated particularly for 
 neutron  cross sections in Section~\ref{sec:performance} and
-Section~\ref{sec:carbon} concludes with outline of future models developments.
+Section~\ref{sec:carbon} concludes with outline of future developments.
 
 
 \section{Geant4 physics lists}\label{sec:list}
