Fix: article an -> a

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -91,7 +91,7 @@ time requirements vs. accuracy of results).
 \item Also, the Geant4 physics system can be easily extended.
 \end{itemize}
 
-An unique feature of Geant4 is physics list concept providing transparent access 
+A unique feature of Geant4 is physics list concept providing transparent access 
 to various physics models. 
 Often an optional models are available with specific strengths and limitations, 
 so physics lists concept is used to
