Fix empty citations
The FORTRAN based original code is described in the paper \cite{incl} and our
C++ translation in the CHEP07 proceedings paper.

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -100,9 +100,9 @@ provide optimal set of functionality for specific use case.
 \section{INCL and ABLA models in Geant4} \label{sec:models}
 
 INCL and ABLA models are casted into independent FORTRAN based Monte Carlo codes 
-INCL4.2 and ABLA V3 \cite{heikkinen07mProceedings}.
+INCL4.2 and ABLA V3 \cite{incl}.
 Recently these implementations have been translated into C++ and codes distributed
-as part of Geant4 toolkit \cite{heikkinen03aPaper}. 
+as part of Geant4 toolkit \cite{pk08bProceedings}. 
 First beta release of INCL 4.2 and ABLA v3 was in Geant4  9.1 (December 2007).
 
 Currently new versions of INCL and ABLA versions in Geant4 are pure
