Fix: pure -> direct

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -105,7 +105,7 @@ Recently these implementations have been translated into C++ and codes distribut
 as part of Geant4 toolkit \cite{pk08bProceedings}. 
 First beta release of INCL 4.2 and ABLA v3 was in Geant4  9.1 (December 2007).
 
-Currently new versions of INCL and ABLA versions in Geant4 are pure
+Currently new versions of INCL and ABLA versions in Geant4 are direct
 FORTRAN to C++ translations. Our goal is to completely redesign the
 INCL cascade code using modern OO techniques.
 
